--- a/create-pw.html
+++ b/create-pw.html
@@ -142,14 +142,14 @@
               <g>
                 <path
                   d="M256 0C114.497 0 0 114.507 0 256c0 141.503 114.507 256 256 256 141.503 0 256-114.507 256-256C512 114.497 397.493 0 256 0zm0 472c-119.393 0-216-96.615-216-216 0-119.393 96.615-216 216-216 119.393 0 216 96.615 216 216 0 119.393-96.615 216-216 216z"
-                  fill="#AD0000"
+                  fill="#FFF"
                   opacity="1"
                   data-original="#000000"
                   class=""
                 ></path>
                 <path
                   d="M256 128.877c-11.046 0-20 8.954-20 20V277.67c0 11.046 8.954 20 20 20s20-8.954 20-20V148.877c0-11.046-8.954-20-20-20z"
-                  fill="#AD0000"
+                  fill="#fff"
                   opacity="1"
                   data-original="#000000"
                   class=""
@@ -158,7 +158,7 @@
                   cx="256"
                   cy="349.16"
                   r="27"
-                  fill="#AD0000"
+                  fill="#fff"
                   opacity="1"
                   data-original="#000000"
                   class=""
