--- a/sign-up.html
+++ b/sign-up.html
@@ -93,8 +93,50 @@
         <form class="form-sign-up">
           <label class="label-email-box"> Your email address </label>
           <input class="text-box" type="text" placeholder="" />
+          <div class="warning-create">
         </form>
-        <a href="create-pw.html"
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            version="1.1"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            width="20"
+            height="20"
+            x="0"
+            y="0"
+            viewBox="0 0 512 512"
+            style="enable-background: new 0 0 512 512"
+            xml:space="preserve"
+            class=""
+          >
+            <g>
+              <path
+                d="M256 0C114.497 0 0 114.507 0 256c0 141.503 114.507 256 256 256 141.503 0 256-114.507 256-256C512 114.497 397.493 0 256 0zm0 472c-119.393 0-216-96.615-216-216 0-119.393 96.615-216 216-216 119.393 0 216 96.615 216 216 0 119.393-96.615 216-216 216z"
+                fill="#FFF"
+                opacity="1"
+                data-original="#000000"
+                class=""
+              ></path>
+              <path
+                d="M256 128.877c-11.046 0-20 8.954-20 20V277.67c0 11.046 8.954 20 20 20s20-8.954 20-20V148.877c0-11.046-8.954-20-20-20z"
+                fill="#fff"
+                opacity="1"
+                data-original="#000000"
+                class=""
+              ></path>
+              <circle
+                cx="256"
+                cy="349.16"
+                r="27"
+                fill="#fff"
+                opacity="1"
+                data-original="#000000"
+                class=""
+              ></circle>
+            </g>
+          </svg>
+          <p>Please re-enter your email</p>
+        </div>
+        <a class="btn-sign-up" href="create-pw.html"
           ><button class="sign-up-button">Continue with email</button></a
         >
         <div class="flex-2lines-text">
@@ -142,7 +184,7 @@
       </section>
     </main>
 
-    <script src="home.js"></script>
+    <script src="signUp.js"></script>
     <script src="commonFeatures.js"></script>
   </body>
 </html>
