--- a/search-results.html
+++ b/search-results.html
@@ -8,7 +8,7 @@
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
       />
-      
+
       <!-- extra fonts -->
       <link
         href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap"
@@ -440,29 +440,7 @@
               </div>
 
               <div class="flex-activities-filters-checkbox">
-                <div class="activities<ul class="links">
-                  <li class="home-sidebar">
-                    <a a href="index.html" class="home">Home</a>
-                  </li>
-                  <li class="discover-sidebar">
-                    <a href="" class="discover">Discover</a>
-                  </li>
-                  <li class="activties-sidebar">
-                    <a href="" class="activties">Activties</a>
-                  </li>
-                  <li class="about-sidebar">
-                    <a href="" class="about">About</a>
-                  </li>
-                  <li class="contact-sidebar">
-                    <a href="" class="contact">Contact</a>
-                  </li>
-                  <li class="register-sidebar">
-                    <a href="sign-up.html" class="register">Register</a>
-                  </li>
-                  <li class="sign-in-sidebar">
-                    <a href="sign-in.html" class="sign-in">Sign-in</a>
-                  </li>
-                </ul>-filters-checkboxs">
+                <div class="activities </ul>-filters-checkboxs">
                   <label class="label" for="checkbox"
                     ><input
                       class="checkbox"
@@ -1990,7 +1968,6 @@
         </div>
       </div>
 
-      
       <script src="home.js"></script>
     </body>
   </html>
