--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </div>
         </aside>
         <!-- burger menu sidebar for responsive screens -->
-        <nav class="header-nav">
+        <nav class="header-nav" style="display: none">
           <button class="sidebar-burger-menu">
             <i class="fas fa-bars"></i>
           </button>
@@ -112,6 +112,93 @@
             >
           </div>
         </nav>
+        <!--  -->
+        <!-- login navbar -->
+        <!--  -->
+        <nav class="header-nav-login">
+          <button class="sidebar-burger-menu">
+            <i class="fas fa-bars"></i>
+          </button>
+          <!-- logo and title -->
+          <div class="nav-logo">
+            <a href="index.html">
+              <svg
+                class="website-logo"
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+              >
+                <path
+                  d="M3.414 13.7779C2.5 13.9999 2 15.1919 2 15.1919C2 15.1919 5.398 15.6259 6.949 17.3129C8.5 18.9999 9.071 22.2629 9.071 22.2629C9.071 22.2629 10.47 22.6979 10.485 20.8489C10.5 18.9999 9.778 17.3129 9.778 17.3129L13.091 13.9999L16.701 21.7039C16.701 21.7039 18.08 22.2299 18.04 20.3649C18 18.4999 16.85 10.2419 16.85 10.2419L19.678 7.41294C19.869 7.22845 20.0214 7.00776 20.1262 6.76375C20.231 6.51974 20.2862 6.2573 20.2885 5.99174C20.2908 5.72619 20.2402 5.46283 20.1396 5.21703C20.0391 4.97124 19.8906 4.74794 19.7028 4.56015C19.515 4.37237 19.2917 4.22386 19.0459 4.1233C18.8001 4.02274 18.5368 3.97213 18.2712 3.97444C18.0056 3.97675 17.7432 4.03192 17.4992 4.13674C17.2552 4.24156 17.0345 4.39392 16.85 4.58494L13.947 7.48794C13.947 7.48794 6.148 6.09394 3.824 6.29694C1.5 6.49994 2.559 7.56294 2.559 7.56294L10.203 11.2329L6.95 14.4859C6.95 14.4859 4.328 13.5559 3.414 13.7779Z"
+                  fill="#2F80ED"
+                />
+              </svg>
+            </a>
+            <a href="index.html"><p class="inline">Your home</p></a>
+          </div>
+
+          <!-- navbar links -->
+          <div class="nav-links">
+            <ul class="nav-bar-link-list">
+              <li><a href="index.html">Home</a></li>
+              <li class="nav-link"><a href="">Discover</a></li>
+              <li class="nav-link"><a href="">Activties</a></li>
+              <li class="nav-link"><a href="">About</a></li>
+              <li class="nav-link"><a href="">Contact</a></li>
+            </ul>
+          </div>
+
+          <!-- navbar new account buttons -->
+          <div class="notifications-profile-photo">
+            <svg
+              class="notifications-icon"
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+            >
+              <path
+                d="M19.3399 14.49L18.3399 12.83C18.1299 12.46 17.9399 11.76 17.9399 11.35V8.82004C17.9387 7.70407 17.6216 6.61125 17.0252 5.66801C16.4288 4.72477 15.5776 3.96966 14.5699 3.49004C14.3128 3.03338 13.9376 2.65418 13.4838 2.39207C13.0299 2.12997 12.514 1.99457 11.9899 2.00004C10.8999 2.00004 9.91994 2.59004 9.39994 3.52004C7.44994 4.49004 6.09994 6.50004 6.09994 8.82004V11.35C6.09994 11.76 5.90994 12.46 5.69994 12.82L4.68994 14.49C4.28994 15.16 4.19994 15.9 4.44994 16.58C4.68994 17.25 5.25994 17.77 5.99994 18.02C7.93994 18.68 9.97994 19 12.0199 19C14.0599 19 16.0999 18.68 18.0399 18.03C18.7399 17.8 19.2799 17.27 19.5399 16.58C19.7999 15.89 19.7299 15.13 19.3399 14.49Z"
+                fill="#2f80ed"
+              />
+              <path
+                d="M14.8302 20.01C14.6199 20.5922 14.2355 21.0954 13.7291 21.4515C13.2228 21.8075 12.6191 21.999 12.0002 22C11.2102 22 10.4302 21.68 9.88018 21.11C9.56018 20.81 9.32018 20.41 9.18018 20C9.31018 20.02 9.44018 20.03 9.58018 20.05C9.81018 20.08 10.0502 20.11 10.2902 20.13C10.8602 20.18 11.4402 20.21 12.0202 20.21C12.5902 20.21 13.1602 20.18 13.7202 20.13C13.9302 20.11 14.1402 20.1 14.3402 20.07L14.8302 20.01Z"
+                fill="#2f80ed"
+              />
+              <circle
+                cx="17"
+                cy="6"
+                r="5"
+                fill="#EB5757"
+                stroke="none"
+                stroke-width="2"
+              />
+            </svg>
+            <img
+              class="user-profile-photo-nav"
+              src="imgs/user-profile-photo.png"
+              alt=""
+            />
+            <li class="dropdown-profile">
+              <ul class="op1">
+                <a href="">Your profile</a>
+              </ul>
+              <ul class="op2">
+                <a href="">Activites</a>
+              </ul>
+              <ul class="op3">
+                <a href="">Settings</a>
+              </ul>
+              <ul class="op4">
+                <a href="">Logout</a>
+              </ul>
+            </li>
+          </div>
+        </nav>
+        <!-- end of login navbar -->
       </header>
 
       <section class="banner-section">
@@ -510,6 +597,7 @@
       </div>
     </div>
 
+    <script src="createAcc.js"></script>
     <script src="home.js"></script>
     <script src="commonFeatures.js"></script>
   </body>
