--- a/checkout.html
+++ b/checkout.html
@@ -146,10 +146,13 @@
               <h3>Room 1</h3>
               <p>2 adults, 1 double bed and 1 twin bed, Non-smoking</p>
             </div>
-            <form action="">
-              <label class="label-first-checkout" for="first-name-checkout">
+            <form>
+              <label
+                class="label-first-checkout"
+                for="checkout-input-first-name"
+              >
                 First name <br />
-                <input class="checkout-input" type="text" />
+                <input class="checkout-input-first-name" type="text" />
               </label>
               <label class="label-last-checkout" for="last-name-checkout">
                 Last name <br />
@@ -179,6 +182,10 @@
                       <img src="imgs/indonsia-flag.svg" alt="" />
                       <p>+62</p>
                     </li>
+                    <li class="country-code-op4">
+                      <img src="imgs/qatar-flag.svg" alt="" />
+                      <p>+974</p>
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -190,6 +197,13 @@
             </div>
           </div>
           <!-- end of room info box -->
+
+          <div class="flex-btns">
+            <button class="pay-visa-btn">Paying with VISA?</button>
+            <div class="line-between-visa-cash"></div>
+            <button class="pay-cash-btn">Paying with CASH?</button>
+          </div>
+
           <div class="payment-options-box">
             <div class="payment-info">
               <svg
@@ -294,7 +308,23 @@
               reviewd and accept the Rules and Restrictions and
               <span class="span-covid-text">Terms of Use</span>.
             </p>
-            <button>Complete Booking</button>
+            <form action="thank-you.html">
+              <a href="thank-you.html"
+                ><button class="complete-booking" onclick="passForgotEmail();">
+                  Complete Booking
+                </button></a
+              >
+            </form>
+
+            <script>
+              function passForgotEmail() {
+                let emailForgot = document.querySelector(
+                  ".checkout-input-first-name"
+                ).value;
+                localStorage.setItem("passData", emailForgot);
+                return false;
+              }
+            </script>
 
             <div class="secure-text-icon">
               <svg
