--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
       <section class="choose-country-section">
         <div class="flex-countries">
           <!-- start of article 1 -->
-          <article class="choose-country-section-article">
+          <article class="choose-country-section-article article1 hidden">
             <img
               class="choose-country-section-article-img"
               src="imgs/article1-section1.jpg"
@@ -346,7 +346,7 @@
           <!-- ------------------- -->
           <!-- start of article 2 -->
 
-          <article class="choose-country-section-article">
+          <article class="choose-country-section-article article2 hidden">
             <img
               class="choose-country-section-article-img"
               src="imgs/article2-section1.jpg"
@@ -361,7 +361,7 @@
         <!-- ------------------- -->
         <div class="flex-countries">
           <!-- start of article 3 -->
-          <article class="choose-country-section-article">
+          <article class="choose-country-section-article article2 hidden">
             <img
               class="choose-country-section-article-img"
               src="imgs/article3-section1.jpg"
@@ -374,7 +374,7 @@
           <!-- end of article 3 -->
           <!-- ------------------- -->
           <!-- start of article 4 -->
-          <article class="choose-country-section-article">
+          <article class="choose-country-section-article article3 hidden">
             <img
               class="choose-country-section-article-img"
               src="imgs/article2-section3.jpg"
@@ -392,7 +392,7 @@
       <!-- start of inspiration section -->
       <h1 class="inspiration-heading">Get inspiration for your next trip</h1>
       <section class="inspiration-section">
-        <article class="inspiration-article1">
+        <article class="inspiration-article1 hidden">
           <div class="overlay-inspiration"></div>
           <h2 class="h2-inspiration">
             Sydeny’s 10 most fashionable 5 star hotels
@@ -402,7 +402,7 @@
             tourism capital ....
           </p>
         </article>
-        <article class="inspiration-article2">
+        <article class="inspiration-article2 article4 hidden">
           <div class="overlay-inspiration"></div>
           <h2 class="h2-inspiration">Top cities for Vegan Travellers</h2>
           <p class="p-inspiration">
@@ -410,7 +410,7 @@
             tourist guide is here...
           </p>
         </article>
-        <article class="inspiration-article3">
+        <article class="inspiration-article3 hidden">
           <div class="overlay-inspiration"></div>
           <h2 class="h2-inspiration">
             World’s top destinations during and post covid timeline
@@ -427,7 +427,7 @@
       <h1 class="popular-hotels-section-heading">Popular hotels</h1>
       <section class="popular-hotels-section">
         <!-- start of article 1 -->
-        <article class="popular-section-article1">
+        <article class="popular-section-article1 hidden">
           <img
             class="popular-section-article-img"
             src="imgs/article1-section3.jpg"
@@ -440,7 +440,7 @@
         <!-- end of article 1 -->
         <!-- ------------------- -->
         <!-- start of article 2 -->
-        <article class="popular-section-article2">
+        <article class="popular-section-article2 hidden">
           <img
             class="popular-section-article-img"
             src="imgs/article2-section3.jpg"
@@ -453,7 +453,7 @@
         <!-- end of article 2 -->
         <!-- ------------------- -->
         <!-- start of article 3 -->
-        <article class="popular-section-article3">
+        <article class="popular-section-article3 hidden">
           <img
             class="popular-section-article-img"
             src="imgs/article3-section3.jpg"
@@ -465,7 +465,7 @@
         <!-- end of article 3 -->
         <!-- ------------------- -->
         <!-- start of article 4 -->
-        <article class="popular-section-article4">
+        <article class="popular-section-article4 hidden">
           <img
             class="popular-section-article-img"
             src="imgs/article4-section3.jpg"
